--- a/playbook.yml
+++ b/playbook.yml
@@ -3,9 +3,9 @@ become: yes
 
 tasks:
     - name: Install httpd
-     yum: name=httpd state=present update_cache=true
-    - name: Start Docker
-     service: name=httpd state=Present
+      yum: name=httpd state=present update_cache=true
+    - name: Start httpd
+      service: name=httpd state=Present
 
     - name: Copy a new index.html file into place, backing up the original if it differs from the copied version
       copy:
