--- a/playbook1.yml
+++ b/playbook1.yml
@@ -1,29 +1,30 @@
-hosts: all
-become: yes
+---
+- hosts: all
+  become: yes
 
-tasks:
-  - name: Install Docker
-    yum: name=docker state=present update_cache=true
-  - name: Start Docker
-    service: name=docker state=started
+  tasks:
+   - name: Install Docker
+     yum: name=docker state=present update_cache=true
+   - name: Start Docker
+     service: name=docker state=started
 
-  - name: Copy a new index.html file into place, backing up the original if it is different from the copied version.
-  - copy:
-      src: /home/ec2-user/index.html
-      dest: /home/ec2-user/index.html
-      owner: ec2-user
-      group: ec2-user
-      mode: '0644'
-      backup: yes
+   - name: Copy a new index.html file into place, backing up the original if it is different from the copied version.
+   - copy:
+       src: /home/ec2-user/index.html
+       dest: /home/ec2-user/index.html
+       owner: ec2-user
+       group: ec2-user
+       mode: '0644'
+       backup: yes
 
-  - name: Copy a new DockerFile
-    copy:
-      src: /home/ec2-user/Dockerfile
-      dest: /home/ec2-user/Dockerfile
-      owner: ec2-user
-      group: ec2-user
-      mode: '0644'
-      backup: yes
+   - name: Copy a new DockerFile
+     copy:
+       src: /home/ec2-user/Dockerfile
+       dest: /home/ec2-user/Dockerfile
+       owner: ec2-user
+       group: ec2-user
+       mode: '0644'
+       backup: yes
 
 
   - name: Build a docker image
