--- a/playbook1.yml
+++ b/playbook1.yml
@@ -9,7 +9,7 @@
       service: name=docker state=started
     
     - name: Copy a new index.html file into place, backing up the original if it is different from the copied version.
-    - copy:
+      copy:
         src: /home/ec2-user/index.html
         dest: /home/ec2-user/index.html
         owner: ec2-user
@@ -18,7 +18,7 @@
         backup: yes
 
     - name: Copy a new DockerFile
-    - copy:
+      copy:
         src: /home/ec2-user/Dockerfile
         dest: /home/ec2-user/Dockerfile
         owner: ec2-user
